--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# Release build
+dist
+
 # Dependency directory
 node_modules
 
