--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.0.8",
     "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "chartist": "^0.9.7"
   }
 }
